feat: polish confirming order